gccida/c2/gen_subprogram_die
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10652:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10658:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v19; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10678:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v39; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10684:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v45; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10687:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10688:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v49; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10694:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v55; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10697:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v58; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10714:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10735:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v96; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10740:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v101; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10745:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v106; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:10927:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:11048:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/dwarf2out.c:11671:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL ) 
                    ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_subprogram_die/src/obj/dwarf2out.o] Error 1
